<resources>
    <string name="app_name">Wheather Forecast</string>
    <string name="enter_the_city_by_name">Enter the city by name:</string>
    <string name="eg_halifax">eg. Halifax or Halifax,CA</string>
    <string name="cityname">CityName</string>
    <string name="textview">TextView</string>
    <string name="get_the_wheather">Get The Wheather</string>
    <string name="xx_c">-XX°C</string>
    <string name="min_xx_c">Min: XX°C</string>
    <string name="max_xx_c">Max: XX°C</string>
    <string name="cloudy">Cloudy</string>
    <string name="overall_cloudy">Overall Cloudy</string>
    <string name="humidity_99">Humidity: 99%</string>
    <string name="clouds_99">Clouds: 99%</string>
    <string name="textview2">TextView</string>
    <string-array name="autofill">
        <item>Halifax ,CA</item>
        <item>Halifax ,US</item>
        <item>Halifax ,GB</item>
        <item>London ,CA</item>
        <item>London ,GB</item>
        <item>Guadalajara ,ES</item>
        <item>Guadalajara ,MX</item>
    </string-array>
</resources>
